fixed flicker and added header with original styling

--- a/pages/styles.scss
+++ b/pages/styles.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Righteous|Bitter:400,400i,700');
+
 .starfield-enclosure {
     min-height: 100vh;
     min-width: 100vw;
@@ -24,5 +26,259 @@
 }
 
 .starfield-overlay h1 {
-  color: #eee;
+  font-family: 'Righteous';
+  color: rgba(255, 255, 255, .9);
+  font-size: 3rem;
+  padding: 0 10px;
+
+  text-decoration: normal;
+  text-align: center;
+  -o-text-overflow: clip;
+  text-overflow: clip;
+  white-space: pre;
+  text-shadow: 0 0 10px rgba(255, 255, 255, .4), 0 0 20px rgba(255, 255, 255, .4), 0 0 30px rgba(255, 255, 255, .4), 0 0 40px rgba(210, 16, 25, .4), 0 0 70px rgba(210, 16, 25, .4), 0 0 80px rgba(210, 16, 25, .4), 0 0 100px rgba(210, 16, 25, .4);
+  -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+}
+
+/* CRT */
+
+.switch {
+  display: none;
+}
+
+.switch-label {
+  display: inline-block;
+  cursor: pointer;
+  background: #fff;
+  color: #111;
+  padding: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+  border-radius: 5px;
+  margin-top: 10px;
+  box-shadow: 0 2px #666;
+}
+.switch-label::after {
+  content: "on";
+}
+.switch-label::before {
+  content: " ";
+  display: inline-block;
+  border-radius: 100%;
+  width: 10px;
+  height: 10px;
+  background: #003321;
+  margin-right: 10px;
+  border: 1px solid #111;
+}
+.switch-label:active {
+  box-shadow: none;
+  transform: translate3d(0, 2px, 0);
+}
+
+.switch:checked + .switch-label::before {
+  background: #22ff55;
+}
+.switch:checked + .switch-label::after {
+  content: "off";
+}
+
+@keyframes flicker {
+  0% {
+    opacity: 0.46686;
+  }
+  5% {
+    opacity: 0.35426;
+  }
+  10% {
+    opacity: 0.82602;
+  }
+  15% {
+    opacity: 0.27561;
+  }
+  20% {
+    opacity: 0.72682;
+  }
+  25% {
+    opacity: 0.43438;
+  }
+  30% {
+    opacity: 0.74639;
+  }
+  35% {
+    opacity: 0.11058;
+  }
+  40% {
+    opacity: 0.10798;
+  }
+  45% {
+    opacity: 0.95324;
+  }
+  50% {
+    opacity: 0.88595;
+  }
+  55% {
+    opacity: 0.47026;
+  }
+  60% {
+    opacity: 0.11885;
+  }
+  65% {
+    opacity: 0.05659;
+  }
+  70% {
+    opacity: 0.60154;
+  }
+  75% {
+    opacity: 0.45075;
+  }
+  80% {
+    opacity: 0.79138;
+  }
+  85% {
+    opacity: 0.21282;
+  }
+  90% {
+    opacity: 0.29963;
+  }
+  95% {
+    opacity: 0.72053;
+  }
+  100% {
+    opacity: 0.72603;
+  }
+}
+.starfield-enclosure {
+    overflow: hidden;
+    background: #111;
+}
+.starfield-enclosure::after {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(18, 16, 16, 0.1);
+  opacity: 0;
+  z-index: 2;
+  pointer-events: none;
+}
+.starfield-enclosure::before {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
+  z-index: 2;
+  background-size: 100% 2px, 3px 100%;
+  pointer-events: none;
+}
+
+.starfield-enclosure::after {
+  animation: flicker 0.15s infinite;
+}
+
+@keyframes turn-on {
+  0% {
+    transform: scale(1, 0.8) translate3d(0, 0, 0);
+    -webkit-filter: brightness(30);
+    filter: brightness(30);
+    opacity: 1;
+  }
+  3.5% {
+    transform: scale(1, 0.8) translate3d(0, 100%, 0);
+  }
+  3.6% {
+    transform: scale(1, 0.8) translate3d(0, -100%, 0);
+    opacity: 1;
+  }
+  9% {
+    transform: scale(1.3, 0.6) translate3d(0, 100%, 0);
+    -webkit-filter: brightness(30);
+    filter: brightness(30);
+    opacity: 0;
+  }
+  11% {
+    transform: scale(1, 1) translate3d(0, 0, 0);
+    -webkit-filter: contrast(0) brightness(0);
+    filter: contrast(0) brightness(0);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1, 1) translate3d(0, 0, 0);
+    -webkit-filter: contrast(1) brightness(1.2) saturate(1.3);
+    filter: contrast(1) brightness(1.2) saturate(1.3);
+    opacity: 1;
+  }
+}
+@keyframes turn-off {
+  0% {
+    transform: scale(1, 1.3) translate3d(0, 0, 0);
+    -webkit-filter: brightness(1);
+    filter: brightness(1);
+    opacity: 1;
+  }
+  60% {
+    transform: scale(1.3, 0.001) translate3d(0, 0, 0);
+    -webkit-filter: brightness(10);
+    filter: brightness(10);
+  }
+  100% {
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    transform: scale(0, 0.0001) translate3d(0, 0, 0);
+    -webkit-filter: brightness(50);
+    filter: brightness(50);
+  }
+}
+.screen {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
+.switch ~ .starfield-enclosure > .screen {
+  animation: turn-off 0.55s cubic-bezier(0.23, 1, 0.32, 1);
+  animation-fill-mode: forwards;
+}
+
+.starfield-enclosure > .screen {
+  animation: turn-on 4s linear;
+  animation-fill-mode: forwards;
+}
+
+@keyframes overlay-anim {
+  0% {
+    visibility: hidden;
+  }
+  20% {
+    visibility: hidden;
+  }
+  21% {
+    visibility: visible;
+  }
+  100% {
+    visibility: hidden;
+  }
+}
+.overlay {
+  color: #00FF00;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  font-size: 60px;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.starfield-enclosure .overlay {
+  animation: overlay-anim 5s linear;
+  animation-fill-mode: forwards;
 }
